# component-generator

./: .bumpversion.cfg  CHANGELOG.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: docs.yml  pypi.yml
docs/: conf.py  index.rst  requirements.txt
src/component_generator/: __main__.py  cli.py  generate.py  info_file.py
src/component_generator/component_files/: component.py  consumer.py  service.py
tests/: test_component_generator.py  test_generate.py  test_helpers.py  test_info_file.py
